--- a/AdventOfCode2024Proj/AdventOfCode2024Proj.vcxproj.filters
+++ b/AdventOfCode2024Proj/AdventOfCode2024Proj.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="..\AdventOfCode2024Sol\DayTwo.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\AdventOfCode2024Sol\DayThree.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AoCFunctions.h">
@@ -41,6 +44,9 @@
       <Filter>Source Files</Filter>
     </Text>
     <Text Include="..\AdventOfCode2024Sol\DayTwo.txt">
+      <Filter>Source Files</Filter>
+    </Text>
+    <Text Include="..\AdventOfCode2024Sol\DayThree.txt">
       <Filter>Source Files</Filter>
     </Text>
   </ItemGroup>
