Finished Day 4, removed puzzle inputs

--- a/AdventOfCode2024Proj/AdventOfCode2024Proj.vcxproj
+++ b/AdventOfCode2024Proj/AdventOfCode2024Proj.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\AdventOfCode2024Sol\DayFour.cpp" />
     <ClCompile Include="..\AdventOfCode2024Sol\DayOne.cpp" />
     <ClCompile Include="..\AdventOfCode2024Sol\DayThree.cpp" />
     <ClCompile Include="..\AdventOfCode2024Sol\DayTwo.cpp" />
@@ -136,11 +137,6 @@
   <ItemGroup>
     <ClInclude Include="..\AdventOfCode2024Sol\Solutions.h" />
     <ClInclude Include="AoCFunctions.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <Text Include="..\AdventOfCode2024Sol\DayOne.txt" />
-    <Text Include="..\AdventOfCode2024Sol\DayThree.txt" />
-    <Text Include="..\AdventOfCode2024Sol\DayTwo.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
