Solved Day 6 Part 1

--- a/AdventOfCode2024Proj/AdventOfCode2024Proj.vcxproj.filters
+++ b/AdventOfCode2024Proj/AdventOfCode2024Proj.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="DayFive.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="DaySix.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AoCFunctions.h">
