--- a/AdventOfCode2024Proj/AdventOfCode2024Proj.vcxproj
+++ b/AdventOfCode2024Proj/AdventOfCode2024Proj.vcxproj
@@ -134,6 +134,7 @@
     <ClCompile Include="AdventOfCode2024Proj.cpp" />
     <ClCompile Include="AoCFunctions.cpp" />
     <ClCompile Include="DayFive.cpp" />
+    <ClCompile Include="DaySix.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\AdventOfCode2024Sol\Solutions.h" />
